--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
+    "@types/datatables.net-buttons": "^1.4.7",
     "@types/node": "^18.17.5",
+    "@types/pdfmake": "^0.2.2",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
